# sentry-mcp-server-zed

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: ci.yml  release.yml
configuration/: default_settings.jsonc  installation_instructions.md  settings_schema.json
src/: lib.rs
