[package]
name = "sentry-mcp-zed-extension"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Zed extension that runs @sentry/mcp-server as a context server"
repository = "https://github.com/fabric0de/sentry-mcp-server-zed"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
zed_extension_api = "0.7.0"
